<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:hint="@string/res_form_hint"
            android:id="@+id/meal_restaurant_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/meal_name"
            android:layout_marginTop="20dp"
            android:layout_below="@id/meal_restaurant_name"
            android:hint="@string/meal_form_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:hint="@string/meal_form_description"
            android:id="@+id/meal_descrtiption"
            android:layout_below="@id/meal_name"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:hint="@string/meal_form_rating"
            android:id="@+id/meal_rating"
            android:layout_below="@id/meal_descrtiption"
            />

        <Button
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/add_meal_button"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="10dp"
            android:id="@+id/add_meal_button"

            />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/meal_photo"
            android:background="@drawable/ic_camera"
            android:layout_alignParentEnd="true"/>






    </RelativeLayout>




</RelativeLayout>