<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relLayout">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/booking_form_name"
            android:id="@+id/booking_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/booking_form_phoneno"
            android:id="@+id/booking_phoneNo"
            android:layout_below="@id/booking_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/booking_form_email"
            android:id="@+id/booking_email"
            android:layout_below="@id/booking_phoneNo"
            />


        <ImageView
            android:id="@+id/date_time_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/booking_email"
            android:layout_marginStart="26dp"
            android:layout_marginTop="33dp"
            android:layout_toEndOf="@id/booking_date"
            android:background="@drawable/ic_date_picker" />



        <TextView
            android:id="@+id/booking_date"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_below="@id/booking_email"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/booking_form_date"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:background="@drawable/white_border"
            android:elevation="10dp"
            />


        <TextView
            android:id="@+id/booking_time"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:layout_below="@id/booking_email"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="66dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/booking_date"
            android:gravity="center"
            android:hint="@string/booking_form_time"
            android:textStyle="bold"
            android:background="@drawable/white_border"
            android:elevation="10dp"
            />

        <Button
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/add_booking_button"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="10dp"
            android:id="@+id/add_booking_button"

            />








    </RelativeLayout>



</RelativeLayout>