<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".fragments.HomeScreenFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">



       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <android.support.constraint.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:id="@+id/top_carousel"
                   android:layout_width="match_parent"
                   android:layout_height="200sp"
                   android:orientation="vertical"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginBottom="20dp">

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="22sp"
                       android:layout_marginTop="10dp"
                       android:text="@string/top_carousel_title"
                       android:gravity="center"
                       />
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/top_carousel_subtitle"
                       android:layout_marginTop="10dp"
                       android:layout_marginBottom="8dp"
                       android:gravity="center"/>

                   <android.support.v7.widget.RecyclerView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:id="@+id/home_recyclerView"
                       android:orientation="horizontal"
                       android:layout_marginBottom="10dp"
                       >


                   </android.support.v7.widget.RecyclerView>



               </LinearLayout>

               

               <LinearLayout
                   android:id="@+id/middle_carousel"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="10dp"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginBottom="20dp"
                   app:layout_constraintTop_toBottomOf="@id/top_carousel"
                   >

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="22sp"
                       android:layout_marginTop="10dp"
                       android:layout_marginBottom="6dp"
                       android:text="@string/bottom_carousel_title"
                       android:gravity="center"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/bottom_carousel_subtitle"
                       android:layout_marginTop="6dp"
                       android:layout_marginBottom="10dp"
                       android:gravity="center"/>

                   <android.support.v7.widget.RecyclerView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:id="@+id/sub_recyclerView"
                       android:orientation="horizontal"
                       android:layout_marginTop="10dp"
                       />


               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="10dp"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginBottom="20dp"
                   app:layout_constraintTop_toBottomOf="@id/middle_carousel"
                   >

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="22sp"
                       android:layout_marginTop="10dp"
                       android:layout_marginBottom="6dp"
                       android:text="@string/meals_carousel_title"
                       android:gravity="center"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/meals_carousel_subtitle"
                       android:layout_marginTop="6dp"
                       android:layout_marginBottom="10dp"
                       android:gravity="center"/>

                   <android.support.v7.widget.RecyclerView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:id="@+id/meals_recyclerView"
                       android:orientation="horizontal"
                       android:layout_marginTop="10dp"
                       />


               </LinearLayout>



           </android.support.constraint.ConstraintLayout>

       </ScrollView>
   </LinearLayout>

</android.support.constraint.ConstraintLayout>